--- a/partials/follow.hbs
+++ b/partials/follow.hbs
@@ -1,7 +1,6 @@
 <div id="follow-icons">
-<a href="http://github.com/username"><i class="fa fa-github-square fa-2x"></i></a>
-	<a href="http://facebook.com/username"><i class="fa fa-facebook-square fa-2x"></i></a>
-	<a href="http://twitter.com/username"><i class="fa fa-twitter-square fa-2x"></i></a>
-	<a href="mailto:you@example.com"><i class="fa fa-envelope-square fa-2x"></i></a>
+<a href="http://github.com/akashnimare"><i class="fa fa-github-square fa-2x"></i></a>
+	<a href="http://twitter.com/meakaakka"><i class="fa fa-twitter-square fa-2x"></i></a>
+	<a href="mailto:svnitakash@gmail.com"><i class="fa fa-envelope-square fa-2x"></i></a>
 	<a href="{{@blog.url}}/rss"><i class="fa fa-rss-square fa-2x"></i></a>
 </div>
