--- a/assets/styles/crisp.css
+++ b/assets/styles/crisp.css
@@ -231,8 +231,8 @@ header #logo img {
 }
 
 header h6 {
-	margin-top: 0.5em;
-	margin-bottom: 0;
+    margin-top: 0.5em;
+    margin-bottom: 0;
 }
 
 /* Posts */
@@ -286,6 +286,91 @@ h3.post-title {
     margin-top: 1.5em;
     background-color: #eee;
     padding: 0.5em;
+}
+
+/* Author info section */
+
+.author-info {
+    padding: 0;
+    position: relative;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    background: #f2f2f2;
+}
+
+.author-info .post-author {
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
+    text-align: center
+}
+
+.author-info .post-author .author-label {
+    display: block;
+    font-size: 1rem;
+    color: gray;
+    font-style: italic
+}
+
+.author-info .post-author .author-link-name {
+    color: #000;
+    -webkit-transition: color .3s;
+    transition: color .3s
+}
+
+.author-info .post-author .author-link-name:active,
+.author-info .post-author .author-link-name:hover,
+.author-info .post-author .author-link-name:focus {
+    color: #e51843
+}
+
+.author-info .post-author .author-website {
+    font-size: 1rem
+}
+
+.author-info .post-author h1 {
+    margin: 0;
+    padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1rem
+}
+
+.author-info .post-author>p {
+    font-size: 1.125rem
+}
+
+.author-info .post-author>p a {
+    color: #e51843
+}
+
+.author-info .post-author .post-author-avatar {
+    width: 8.5rem;
+    height: 8.5rem;
+    border-radius: 50%;
+    float: none;
+    margin-right: 0;
+    margin-top: 1rem;
+    margin-bottom: 1.25rem;
+}
+
+@media only screen and (min-width: 40.063em) {
+    .author-info .post-author .post-author-avatar {
+        margin-right: 3.125rem;
+        margin-bottom: 0;
+        float: left;
+    }
+}
+
+.author-info .post-author a {
+    text-decoration: none
+}
+
+@media only screen and (min-width: 40.063em) {
+    .author-info .post-author {
+        text-align: left;
+    }
 }
 
 #comments {
