--- a/post.hbs
+++ b/post.hbs
@@ -5,6 +5,7 @@
 	<h1 class="post-title">{{title}}</h1>
 	{{content}}
 	{{> share}}
+	     {{> post-author}}
   {{> comments}}
 </article>
 {{/post}}
