--- a/assets/styles/crisp.css
+++ b/assets/styles/crisp.css
@@ -265,27 +265,89 @@ h3.post-title {
     color: #ccc;
 }
 
+
+#social-bar {
+    margin-top: 1.5em;
+    padding: 0.5em;
+    padding-bottom: 3rem;
+}
+
+.post-share {
+    max-width: 25%;
+    float: left;
+    color: #ccc;
+}
+
+.post-share a {
+    display: block;
+    float: right !important;
+    width: 3em;
+    height: 2em;
+    margin-right: 0.2rem;
+    margin-top: 0.1rem;
+    margin-left: 0.4rem;
+    padding: 0;
+    float: left;
+    font-size: 0.75em;
+    line-height: 2em;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 2px;
+    transition: all ease 0.3s;
+}
+
+.post-share a:hover,
+.post-share a:focus {
+    background-color: #212226
+}
+
+.taglist {
+    float: right;
+}
 .taglist a {
     background-color: #ccc;
     color: #fff;
     display: inline-block;
     line-height: 1.5em;
     padding: 0.3em 0.6em 0.3em 0.6em;
-    vertical-align: 20%;
+    vertical-align: 10%;
     font-size: 0.5em;
     font-family: "Open Sans", sans-serif;
     font-weight: 700 !important;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     border-radius: 0.25em;
+    font-size: 0.7rem;
     -moz-border-radius: 0.25em;
+    text-decoration: none;
     -webkit-border-radius: 0.25em;
 }
 
-#social-bar {
-    margin-top: 1.5em;
-    background-color: #eee;
-    padding: 0.5em;
+.taglist a:hover {
+    opacity: 0.8;
+}
+
+.post-share a i {
+    color: inherit;
+    font-size: 1rem;
+}
+
+.post-share a i:before {
+    width: auto;
+    height: auto
+}
+
+.post-share .twitter {
+    background-color: #3ea9dd
+}
+
+.post-share .facebook {
+    background-color: #3c5a98
+}
+
+.post-share .googleplus {
+    background-color: #d14836
 }
 
 /* Author info section */
