--- a/post.hbs
+++ b/post.hbs
@@ -1,10 +1,12 @@
 {{!< default}}
 {{#post}}
 <article id="{{id}}" class="{{post_class}}">
-	<div class="post-stamp">{{date published_at format='MMMM D, YYYY'}}<span class="taglist">{{tags separator=" " prefix=" &middot; "}}</span>{{#if featured}}<span class="separator"> &middot; </span><i class="fa fa-star-o feature-star"></i>{{/if}}</div>
+	<div class="post-stamp">{{date published_at format='MMMM D, YYYY'}}</div>
 	<h1 class="post-title">{{title}}</h1>
 	{{content}}
+    <hr>
 	{{> share}}
+    <hr>
 	     {{> post-author}}
   {{> comments}}
 </article>
