--- a/default.hbs
+++ b/default.hbs
@@ -37,7 +37,7 @@
 			{{{body}}}
 		</main>
 		<footer id="footer">
-			<section id="footer-message">&copy; {{date format='YYYY'}} {{@blog.title}}. All rights reserved.</section>
+			<section id="footer-message">  <a href="http://github.com/akashnimare/how-to-electron">Built with <i class="fa fa-heart"></i> and Free and Open-Source Software</a>.</section>
 		</footer>
 	{{ghost_foot}}
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
